[Fix] card btn highlighting in dark mode & on touch devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -158,7 +158,8 @@ html[data-theme="dark"] {
   }
 
   .card-btn.touch {
-    @apply !border-font-color-pri !text-font-color-pri;
+    /* @apply !border-font-color-pri !text-font-color-pri; */
+    @apply border-borderhover;
   }
 
   .util-icon {
@@ -224,11 +225,14 @@ html[data-theme="dark"] {
   }
 
   .home-page-action-btn {
-    @apply rounded-lg border-2 border-b-6 border-font-color-blue-dark bg-font-color-blue px-6 py-3 text-lg font-bold text-font-color-white transition-all hover:border-font-color-pri hover:text-font-color-pri active:border-font-color-pri active:text-font-color-pri sm:px-8 sm:py-4 sm:text-xl;
+    /* @apply rounded-lg border-2 border-b-6 border-font-color-blue-dark bg-font-color-blue px-6 py-3 text-lg font-bold text-font-color-white transition-all hover:border-font-color-pri hover:text-font-color-pri active:border-font-color-pri active:text-font-color-pri sm:px-8 sm:py-4 sm:text-xl; */
+    @apply rounded-lg border-2 border-b-6 border-font-color-blue-dark bg-font-color-blue px-6 py-3 text-lg font-bold text-font-color-white transition-all hover:border-borderhover active:border-borderhover sm:px-8 sm:py-4 sm:text-xl;
   }
 
   .home-page-action-btn.touch {
-    @apply border-font-color-pri text-font-color-pri;
+    /* @apply border-font-color-pri dark:border-font text-font-color-pri; */
+    /* @apply border-borderhover dark:text-font-color-pri; */
+    @apply border-borderhover;
   }
   /* #endregion */
 
